--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "country-flag-icons": "^1.5.13",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-fade": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "next": "10.2.3",
     "next-translate": "^1.0.0-experimental.18",
     "react": "17.0.2",
