--- a/package.json
+++ b/package.json
@@ -7,17 +7,32 @@
     "build": "next build && next export",
     "start": "next start"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "country-flag-icons": "^1.5.13",
+    "dotenv": "^16.4.7",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-fade": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "next": "10.2.3",
     "next-translate": "^1.0.0-experimental.18",
     "react": "17.0.2",
+    "react-datepicker": "^7.6.0",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "resend": "^4.1.1",
     "styled-components": "^5.3.0",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "toastr": "^2.1.4",
+    "yup": "^1.6.1"
   }
 }
